--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
         </div>
         <img class="escola-imagem" src="img-fachada.jpeg" alt="fachada do colégio Rocha Pombo">
     </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="monica.jpg" alt="foto da aluna monica">
+            <h3 class="estudante-nome">Mônica</h3>
+            <a href="cwb_monica@.com"><img class="estudante-icone" src="intagram.png" alt="icone instragram"></a>
+        </div>
+        </div>
+    </section>
     
 </body>
 </html>
