--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabeçalho" >
-    <img class="cabeçalho-imagem" src="/tmp/guest-t54zzz/Downloads/57049354_413896509193008_8610636312891883520_n.jpg" alt="Logo Colégio Estadual Rocha Pombo EFMP">
+    <img class="cabeçalho-imagem" src="logo.jpg" alt="Logo Colégio Estadual Rocha Pombo EFMP">
     <ul class="cabeçalho-lista" >
         <li class="cabeçalho-lista-item" >Escola</li>
         <li class="cabeçalho-lista-item" >Estudante</li>
@@ -30,10 +30,30 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="monica.jpg" alt="foto da aluna monica">
             <h3 class="estudante-nome">Mônica</h3>
-            <a href="cwb_monica@.com"><img class="estudante-icone" src="intagram.png" alt="icone instragram"></a>
+            <a href="cwb_mo@.com"><img class="estudante-icone" src="intagram.png" alt="icone instragram"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="cebolinha.jpeg" alt="foto do aluno cebolinha">
+            <h3 class="estudante-nome">Cebolinha</h3>
+            <a href="cwb_cebola.com"><img class="estudante-icone" src="intagram.png" alt="icone instragram"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="magali.png" alt="foto da aluna magali">
+            <h3 class="estudante-nome">Magali</h3>
+            <a href="cwb_maga.com"><img class="estudante-icone" src="intagram.png" alt="icone instragram"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="cascão.png" alt="foto do aluno cascão">
+            <h3 class="estudante-nome">Cascão</h3>
+            <a href="cwb_cascão.com"><img class="estudante-icone" src="intagram.png" alt="icone instragram"></a>
         </div>
         </div>
     </section>
-    
+    <footer class="rodape">
+        <img class="rodape-imagem" src="logo.jpg" alt="logo COLÉGIO">
+    </footer>
 </body>
 </html>
